--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "index.js",
   "dependencies": {
     "de-indent": "^1.0.2",
+    "hash-sum": "^1.0.2",
     "object-assign": "^4.1.0",
     "parse5": "^2.1.5",
     "vue-template-validator": "^1.1.5"
